--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <link rel='stylesheet' href='assets/style.scss' />
 </head>
 <body>
-<script type="module" src="./src/index.ts"></script>
+<script type="module" src="./src/index.js"></script>
 <script type="text/javascript">
   window.dataLayer = window.dataLayer || [];
 
